--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "ml-dataset-metadata",
   "version": "0.0.0",
   "description": "a class to manipulate metadata for dataset",
-  "main": "src/index.js",
+  "main": "lib/index.js",
+  "module": "src/index.js",
   "files": [
     "lib",
     "src"
   ],
   "scripts": {
+    "build": "rollup -c && cheminfo-build",
     "eslint": "eslint src",
     "eslint-fix": "npm run eslint -- --fix",
     "test": "npm run test-coverage && npm run eslint",
@@ -37,13 +39,17 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "cheminfo-build": "^1.0.3",
     "eslint": "^6.1.0",
     "eslint-config-cheminfo": "^1.20.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.13.0",
     "jest": "^24.8.0",
     "jest-matcher-deep-close-to": "^1.3.0",
-    "ml-dataset-iris": "^1.0.0"
+    "ml-dataset-iris": "^1.0.0",
+    "rollup": "^1.25.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "dependencies": {
     "ml-matrix": "^6.2.0"
