--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "src"
   ],
   "scripts": {
-    "build": "rollup -c && cheminfo-build",
+    "build": "rollup -c && cheminfo-build --entry src/index.js",
     "eslint": "eslint src",
     "eslint-fix": "npm run eslint -- --fix",
     "test": "npm run test-coverage && npm run eslint",
@@ -21,7 +21,7 @@
     "url": "git+https://github.com/mljs/dataset-metadata.git"
   },
   "keywords": [],
-  "author": "jwist",
+  "author": "Julien Wist",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mljs/dataset-metadata/issues"
@@ -38,20 +38,22 @@
     "trailingComma": "all"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
-    "cheminfo-build": "^1.0.3",
-    "eslint": "^6.1.0",
-    "eslint-config-cheminfo": "^1.20.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.13.0",
-    "jest": "^24.8.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
+    "cheminfo-build": "^1.0.5",
+    "eslint": "^6.8.0",
+    "eslint-config-cheminfo": "^2.0.4",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
+    "jest": "^25.1.0",
     "jest-matcher-deep-close-to": "^1.3.0",
-    "ml-dataset-iris": "^1.0.0",
-    "rollup": "^1.25.2",
+    "ml-dataset-iris": "^1.1.1",
+    "rollup": "^1.31.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0"
   },
   "dependencies": {
-    "ml-matrix": "^6.2.0"
+    "ml-matrix": "^6.4.1"
   }
 }
